--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bill</title>
+  <title>Wilmer Esquivel</title>
   <!-- Bootstrap Styles-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   <link rel="stylesheet" href="resources/styles/styles.css">
   <!-- INCLUDE STYLES FILE HERE -->
+  <link rel="stylesheet" href="resources/styles/styles.css">
 </head>
 
 <body>
   <div class="container">
     <h1>
-      Bill
+      Wilmer Esquivel
     </h1>
+    <img src="resources/images/selfie.jpg">
 
     <!-- WORK FROM INSIDE THIS CONTAINER-->
   </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
+  <script> src="resources/scripts/index.js"</script>
 
   <!-- Bootstrap Scripts-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
