Added personal background

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <img src="resources/images/selfie.jpg">
 
     <!-- WORK FROM INSIDE THIS CONTAINER-->
+    <div class="personalBackground">
+      <h2>Personal Background</h2>
+      <ul>IT major specializing in Software Development</ul>
+      <ul>Guatemalan</ul>
+      <ul>I love to eat pizza and sushi</ul>
+    </div>
+
+ 
+    </div>
   </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
