--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
       <ul>I love to eat pizza and sushi</ul>
     </div>
 
- 
+    <div class="experience">
+      <h2>Experience</h2>
+      <ol>iQ4 Cloud Security Intern</ol>
+      <ol>Coursera IT Google Support</ol>
+      <ol>IBM Data Science Program</ol>
     </div>
   </div>
 
