Added programming languages

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
       <ol>Coursera IT Google Support</ol>
       <ol>IBM Data Science Program</ol>
     </div>
+
+    <div class="programmingLanguages">
+      <ol>Java</ol>
+      <ol>HTML</ol>
+      <ol>C#</ol>
+    </div>
+
+    
   </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
