--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
 
     <div class="programmingLanguages">
+      <h2>Programming Languages</h2>
       <ol>Java</ol>
       <ol>HTML</ol>
       <ol>C#</ol>
