--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
       <ol>C#</ol>
     </div>
 
+    <div class="achievements">
+      <h2>Achievements</h2>
+      <ul>Hispanic Scholarship Fund Recipient</ul>
+      <ul>4x LULAC Scholarship Recipient</ul>
+      <ul>Hispanic Chamber Cincinnati Scholarship Recipient</ul>
+    </div>
+
     
   </div>
 
