--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
       <ul>Hispanic Chamber Cincinnati Scholarship Recipient</ul>
     </div>
 
+    <div class="games">
+      <h2>Favorite Games</h2>
+      <ul>Madden 23</ul>
+      <ul>FIFA 23</ul>
+      <ul>Halo Reach</ul>
+
+    </div>
+
     
   </div>
 
