--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
     </div>
 
-    
+
   </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
-  <script> src="resources/scripts/index.js"</script>
+  <script src="resources/scripts/index.js"></script>
 
   <!-- Bootstrap Scripts-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
