Updated div sections and selfie

--- a/index.html
+++ b/index.html
@@ -18,47 +18,47 @@
     <h1>
       Wilmer Esquivel
     </h1>
-    <img src="resources/images/selfie.jpg">
+    <img src="resources/images/selfie2.jpg">
+
 
     <!-- WORK FROM INSIDE THIS CONTAINER-->
-    <div class="personalBackground">
+    <div class="section" id="personalBackground">
       <h2>Personal Background</h2>
       <ul>IT major specializing in Software Development</ul>
       <ul>Guatemalan</ul>
       <ul>I love to eat pizza and sushi</ul>
     </div>
 
-    <div class="experience">
+    <div class="section" id="experience">
       <h2>Experience</h2>
       <ol>iQ4 Cloud Security Intern</ol>
       <ol>Coursera IT Google Support</ol>
       <ol>IBM Data Science Program</ol>
     </div>
 
-    <div class="programmingLanguages">
+    <div class="section" id="programmingLanguages">
       <h2>Programming Languages</h2>
       <ol>Java</ol>
       <ol>HTML</ol>
       <ol>C#</ol>
     </div>
 
-    <div class="achievements">
+    <div class="section" id="achievements">
       <h2>Achievements</h2>
       <ul>Hispanic Scholarship Fund Recipient</ul>
       <ul>4x LULAC Scholarship Recipient</ul>
       <ul>Hispanic Chamber Cincinnati Scholarship Recipient</ul>
     </div>
 
-    <div class="games">
+    <div class="section" id="games">
       <h2>Favorite Games</h2>
       <ul>Madden 23</ul>
       <ul>FIFA 23</ul>
       <ul>Halo Reach</ul>
-
     </div>
 
-
   </div>
+
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
